# Qt_template

./: CMakeLists.txt  Qt_template.pro  build.sh  main_window.cpp  main_window.h  main_window.ui
